Fix Java 8 build errors in wpilibj
* @Deprecated has no args in Java 8.
* No Map.of()
* No List.of()
* No canAccess() in Reflection on methods for tests